--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -22,13 +22,17 @@
               <div class="brand-logo" style="margin-left: auto; margin-right: auto; display:table">
 <!--                 <img src="../../images/logo.png" alt="logo"> -->
               </div>
-              <form class="pt-3" th:action="@{/user/login}" method="post" name="loginForm">
+              <form class="pt-3" th:action="@{/user/login}" th:method="POST" name="loginForm">
                 <div class="form-group">
-                  <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" name="username" placeholder="아이디">
+                  <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" name="userId" placeholder="아이디">
                 </div>
                 <div class="form-group">
                   <input type="password" class="form-control form-control-lg" name="password" placeholder="비밀번호">
                 </div>
+                <p th:if="${#httpServletRequest.getAttribute('errorMessage')}!=null">
+                  <i class="mdi mdi mdi-close-box-outline text-danger"></i>
+                  <b style="color:red" th:text="${#httpServletRequest.getAttribute('errorMessage')}"></b>
+                </p>
                 <div class="mt-3">
                   <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="#" onclick="document.loginForm.submit()" >로그인</a>
                 </div>
@@ -41,11 +45,6 @@
                   </div>
                   <a href="#" class="auth-link text-black">비밀번호가 기억이 나지 않으십니까 ?</a>
                 </div>
-                <!--<div class="mb-2">
-                  <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                    <i class="mdi mdi-facebook mr-2"></i>Connect using facebook
-                  </button>
-                </div> -->
                 <div class="text-center mt-4 font-weight-light">
                   아이디가 존재하지 않으신가요 ? <a href="/user/register" class="text-primary">회원가입</a>
                 </div>
