--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -24,14 +24,14 @@
               </div>
               <form class="pt-3" th:action="@{/user/login}" th:method="POST" name="loginForm">
                 <div class="form-group">
-                  <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" name="userId" placeholder="아이디">
+                  <input type="text" class="form-control form-control-lg" name="userId" placeholder="아이디">
                 </div>
                 <div class="form-group">
                   <input type="password" class="form-control form-control-lg" name="password" placeholder="비밀번호">
                 </div>
-                <p th:if="${#httpServletRequest.getAttribute('errorMessage')}!=null">
+                <p th:if="${#request.getAttribute('errorMessage')}!=null">
                   <i class="mdi mdi mdi-close-box-outline text-danger"></i>
-                  <b style="color:red" th:text="${#httpServletRequest.getAttribute('errorMessage')}"></b>
+                  <b style="color:red" th:text="${#request.getAttribute('errorMessage')}"></b>
                 </p>
                 <div class="mt-3">
                   <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="#" onclick="document.loginForm.submit()" >로그인</a>
