--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -22,7 +22,7 @@
               <div class="brand-logo" style="margin-left: auto; margin-right: auto; display:table">
 <!--                 <img src="../../images/logo.png" alt="logo"> -->
               </div>
-              <form class="pt-3" th:action="@{/user/login}" th:method="POST" name="loginForm">
+              <form class="pt-3" th:action="@{/user/login}" method="post" name="loginForm">
                 <div class="form-group">
                   <input type="text" class="form-control form-control-lg" name="userId" placeholder="아이디">
                 </div>
