--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,11 +22,13 @@
         <div class="page-header">
             <h1>게시글 목록</h1>
         </div>
-        <div class="pull-left" style="width:100px;margin:10px 0;">
-            <a href="/user/login" class="btn btn-primary btn-block">로그인</a>
-        </div>
-        <div class="pull-right" style="width:100px;margin:10px 0;">
-            <a href="/post/create" class="btn btn-primary btn-block">게시글 등록</a>
+        <div class="col-xs-12">
+            <div class="col-xs-6" style="width:100px;margin:10px 0;">
+                <a href="/login" class="btn btn-primary btn-block">로그인</a>
+            </div>
+            <div class="col-xs-6" style="width:200px;margin:10px 0;">
+                <a href="/post/create" class="btn btn-primary btn-block pull-right">게시글 등록</a>
+            </div>
         </div>
         <div class="container-fluid">
             <div class="row">
