--- a/src/main/resources/templates/post/form.html
+++ b/src/main/resources/templates/post/form.html
@@ -29,13 +29,13 @@
 	    	}
 			
 	        $.ajax({
-	            url: '/board/write',
+	            url: '/api/v1/board/',
 	            method: 'POST',
 	            data : $('#info').serialize(),
-	            async : false,
+	            async : true,
 	            success : function (res) {
 	          	  alert("게시글 작성 완료");
-	          	  location.href='/board/list';
+	          	  location.href='/';
 	            },
 	            error: function (xhr) {
 	          	  alert("게시글 작성 실패");
