--- a/src/main/resources/static/partials/_navbar.html
+++ b/src/main/resources/static/partials/_navbar.html
@@ -61,7 +61,7 @@
                   <h6 class="ellipsis font-weight-normal"> Johnson
                   </h6>
                   <p class="font-weight-light small-text text-muted mb-0">
-                    Upcoming board meeting
+                    Upcoming post meeting
                   </p>
                 </div>
               </a>
