--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-xs-12">
             <div class="col-xs-6" style="width:100px;margin:10px 0;">
-                <a href="/login" class="btn btn-primary btn-block">로그인</a>
+                <a href="/user/login" class="btn btn-primary btn-block">로그인</a>
             </div>
             <div class="col-xs-6" style="width:200px;margin:10px 0;">
                 <a href="/post/create" class="btn btn-primary btn-block pull-right">게시글 등록</a>
@@ -43,12 +43,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:each="board : ${boardList}">
-                            <td th:text="${board.id}"></td>
-                            <td><a th:href="'/post/'+ ${board.id}" th:text="${board.title}"></a></td>
-                            <td th:text="${board.createUser.userId}"></td>
-                            <td th:text="${#temporals.format(board.createDateTime, 'yyyy-MM-dd HH:mm:dd')}"></td>
-                            <td th:text="${#temporals.format(board.modifiedDateTime, 'yyyy-MM-dd HH:mm:dd')}"></td>
+                        <tr th:each="post : ${boardList}">
+                            <td th:text="${post.id}"></td>
+                            <td><a th:href="'/post/'+ ${post.id}" th:text="${post.title}"></a></td>
+                            <td th:text="${post.createUser.userId}"></td>
+                            <td th:text="${#temporals.format(post.createDateTime, 'yyyy-MM-dd HH:mm:dd')}"></td>
+                            <td th:text="${#temporals.format(post.modifiedDateTime, 'yyyy-MM-dd HH:mm:dd')}"></td>
                         </tr>
                     </tbody>
                 </table>
