--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -16,13 +16,13 @@
 			if (!confirm("위의 내용으로 수정 하시겠습니까 ?")) return;
 			
 	        $.ajax({
-	            url: '/board/modify',
+	            url: '/post/modify',
 	            method: 'PUT',
 	            data : $('#info').serialize(),
 	            async : false,
 	            success : function (res) {
 	          	  alert("게시글 수정 완료");
-	          	  location.href='/board/detail?idx=' + $('#idx').val();
+	          	  location.href='/post/detail?idx=' + $('#idx').val();
 	            },
 	            error: function (xhr) {
 	          	  alert("게시글 수정 실패");
@@ -35,13 +35,13 @@
 			if (!confirm("정말 삭제 하시겠습니까?")) return;
 			
 	        $.ajax({
-	            url: '/board/delete',
+	            url: '/post/delete',
 	            method: 'DELETE',
 	            async : false,
 	            data : $('#info').serialize(),
 	            success : function (res) {
 	          	  alert("게시글 삭제 완료");
-	          	  location.href='/board/list';
+	          	  location.href='/post/list';
 	            },
 	            error: function (xhr) {
 	          	  alert("게시글 삭제 실패");
@@ -77,7 +77,7 @@
 <body>
      <header th:fragment="header">
         <nav class="navbar navbar-inverse">
-            <a class="navbar-brand" href="/board/list">Simple Board</a>
+            <a class="navbar-brand" href="/post/list">Simple Board</a>
         </nav>
     </header>
     
@@ -88,26 +88,26 @@
         <div class="container-fluid">
         	<form id="info" onsubmit="return false;">
         		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-        		<input type="hidden" id="idx" name="idx" th:value="${detail.idx}"/>
+        		<input type="hidden" id="idx" name="idx" th:value="${ContentDetail.id}"/>
 	            <div class="row">
 	                <div class="form-group col-lg-12">
 	                  <label>제목</label>
 	                  <div class="input-group">
-	                  	<h2 id="viewTitle" th:text="${detail.title}"></h2>
-	                  	<input id="title" type="text" name="title" class="form-control form-control-lg " placeholder="" th:value="${detail.title}" style="display:none">
+	                  	<h2 id="viewTitle" th:text="${ContentDetail.title}"></h2>
+	                  	<input id="title" type="text" name="title" class="form-control form-control-lg " placeholder="" th:value="${ContentDetail.title}" style="display:none">
 	                  </div>
 	                </div>
 	                <div class="form-group col-lg-12" id="editor">
 	                  <label>내용</label>
-	                  	<h5 id="viewContent" th:text="${detail.content}"></h5>
-	                  	<textarea id="content" name="content" class="form-control form-control-lg " placeholder="" rows="20"  th:text="${detail.content}" style="display:none; resize: none;"></textarea>
+	                  	<h5 id="viewContent" th:text="${ContentDetail.contents}"></h5>
+	                  	<textarea id="content" name="content" class="form-control form-control-lg " placeholder="" rows="20"  th:text="${ContentDetail.contents}" style="display:none; resize: none;"></textarea>
 	                </div>
 	            </div>
 		        <div class="pull-left">
-		            <a id="update" th:if="${detail.idx}" onclick="showModifyForm(this.id);" class="btn btn-info btn-block">수정</a>
+		            <a id="update" th:if="${ContentDetail.id}" onclick="showModifyForm(this.id);" class="btn btn-info btn-block">수정</a>
 		            <a id="updateConfirm" onclick="contentModify(this.id);" class="btn btn-success btn-block" style="display: none;">완료</a>
 		            <a id="updateCancle" onclick="showModifyForm(this.id);" class="btn btn-warning btn-block" style="display: none;">취소</a>
-		            <a id="delete" th:if="${detail.idx}"onclick="contentDelete();" class="btn btn-danger btn-block">삭제</a>
+		            <a id="delete" th:if="${ContentDetail.id}"onclick="contentDelete();" class="btn btn-danger btn-block">삭제</a>
 		        </div>
 	        </form>
         </div>
