--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -46,7 +46,7 @@
                   <a href="#" class="auth-link text-black">비밀번호가 기억이 나지 않으십니까 ?</a>
                 </div>
                 <div class="text-center mt-4 font-weight-light">
-                  아이디가 존재하지 않으신가요 ? <a href="/register" class="text-primary">회원가입</a>
+                  아이디가 존재하지 않으신가요 ? <a href="/user/register" class="text-primary">회원가입</a>
                 </div>
               </form>
             </div>
