--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" 
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
-        layout:decorator="/layout/default">
+<html
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorator="layout/default_layout">
  
 <head>
     <title>List</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel='stylesheet' th:href='@{/css/bootstrap.min.css}'>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="/js/bootstrap.min.js"></script>
 </head>
  
 <body>
-     <header th:fragment="header">
-        <nav class="navbar navbar-inverse">
-            <a class="navbar-brand" href="/">Board</a>
-        </nav>
-    </header>
-    
     <div class="container" layout:fragment="content">
         <div class="page-header">
             <h1>게시글 목록</h1>
@@ -86,7 +77,7 @@
         </div>
     </div>
 </body>
-<script>
+<script layout:fragment="customScript">
     let prevItem = null;
 
     const index = {
