--- a/src/main/resources/templates/post/form.html
+++ b/src/main/resources/templates/post/form.html
@@ -1,86 +1,72 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" 
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
-        layout:decorator="/layout/default">
- 
-<head>
-   	<title>Form</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel='stylesheet' th:href='@{/css/bootstrap.min.css}'>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="/js/bootstrap.min.js"></script>
-   	<script type="text/javascript">
+<html xmlns:th="http://www.thymeleaf.org"
+		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+		layout:decorator="/layout/default_layout">
 
+	<script type="text/javascript">
 		function postWrite() {
 			var title = $('#info').find('[name=title]').val();
 			var content = $('#info').find('[name=contents]').val();
-			
-	    	if (!title) {
-	    		alert("제목을 입력해주세요.");
-	    		return;
-	    	}
-	    	
-	    	if (!content) {
-	    		alert("내용을 입력해주세요.");
-	    		return;
-	    	}
-			
-	        $.ajax({
-	            url: '/api/v1/post/',
-	            method: 'POST',
-	            data : $('#info').serialize(),
-	            async : true,
-	            success : function (res) {
-	          	  alert("게시글 작성 완료");
-	          	  location.href='/';
-	            },
-	            error: function (xhr) {
-	          	  alert("게시글 작성 실패");
-	            }
-	        });
+
+			if (!title) {
+				alert("제목을 입력해주세요.");
+				return;
+			}
+
+			if (!content) {
+				alert("내용을 입력해주세요.");
+				return;
+			}
+
+			$.ajax({
+				url: '/api/v1/post/',
+				method: 'POST',
+				data : $('#info').serialize(),
+				async : true,
+				success : function (res) {
+				  alert("게시글 작성 완료");
+				  location.href='/';
+				},
+				error: function (xhr) {
+				  alert("게시글 작성 실패");
+				}
+			});
 		}
-    </script>
-</head>
- 
-<body>
-     <header th:fragment="header">
-        <nav class="navbar navbar-inverse">
-            <a class="navbar-brand" href="/post/list">Simple Board</a>
-        </nav>
-    </header>
-    
-    <div class="container" layout:fragment="content">
-        <div class="page-header">
-            <h1>게시글 등록</h1>
-        </div>
-        <div class="container-fluid">
-        	<form id="info" onsubmit="return false;">
-        		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-	            <div class="row">
-					<div class="form-group col-lg-4">
-						<label>카테고리</label>
-						<div class="input-group">
-							<input type="text" name="category" class="form-control form-control-lg" placeholder="" maxlength="20" required>
+	</script>
+
+	<body>
+		<div class="container" layout:fragment="content">
+			<div class="page-header">
+				<h1>게시글 등록</h1>
+			</div>
+			<div class="container-fluid">
+				<form id="info" onsubmit="return false;">
+					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+					<div class="row">
+						<div class="form-group col-lg-4">
+							<label>카테고리</label>
+							<div class="input-group">
+								<input type="text" name="category" class="form-control form-control-lg" placeholder="" maxlength="20" required>
+							</div>
+						</div>
+						<div class="form-group col-lg-8">
+						  <label>제목</label>
+						  <div class="input-group">
+							<input type="text" name="title" class="form-control form-control-lg" placeholder="" maxlength="20" required>
+						  </div>
+						</div>
+						<div class="form-group col-lg-12" id="editor">
+						  <label>내용</label>
+						  <div class="input-group">
+							<textarea name="contents" class="form-control form-control-lg" placeholder="" rows="20"  required></textarea>
+						  </div>
 						</div>
 					</div>
-	                <div class="form-group col-lg-8">
-	                  <label>제목</label>
-	                  <div class="input-group">
-	                    <input type="text" name="title" class="form-control form-control-lg" placeholder="" maxlength="20" required>
-	                  </div>
-	                </div>
-	                <div class="form-group col-lg-12" id="editor">
-	                  <label>내용</label>
-	                  <div class="input-group">
-	                    <textarea name="contents" class="form-control form-control-lg" placeholder="" rows="20"  required></textarea>
-	                  </div>
-	                </div>
-	            </div>
-		        <div class="pull-left">
-		            <a onclick="postWrite();" class="btn btn-primary btn-block">작성</a>
-		        </div>
-	        </form>
-        </div>
-    </div>
-</body>
+					<div class="pull-left">
+						<a onclick="postWrite();" class="btn btn-primary btn-block">작성</a>
+					</div>
+				</form>
+			</div>
+		</div>
+	</body>
 </html>
